src/App.scss
@import 'colors';

h1 {
  margin-top: 50px;
  margin-bottom: 50px;
  font-size: 72px;
  font-weight: 300;
  color: $Primary;
  &.theme2 {
    color: $Theme2Primary;
    background: $Theme2Background;
  }
}

button:focus {
  outline: 0;
}

.wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: $Background;
  color: $Primary;
  &.theme2 {
    color: $Theme2Primary;
    background: $Theme2Background;
  }
}

.github-badge {
  position: absolute;
  top: 0;
  right: 0;
}

.dog-logo {
  height: 150px;
  top: 10px;
  left: 10px;
  margin-bottom: 15px;
  position: inherit;
  display: block;
}

.btn {
  color: #fff;
  background-color: $Secondary;
  font-size: 30px;
  width: 200px;
  height: 70px;
  padding: 1rem 2rem;
  border: none;
  border-radius: 2rem;
  margin-bottom: 1.5rem;
  transition: all 0.3s;

  &.theme2 {
    background-color: $Theme2Secondary;
  }

  &:active {
    background-color: $Secondary;
    transform: translateY(4px);
  }

  &:hover {
    background-color: $Other;
    &.theme2 {
      background-color: $Theme2Other;
    }
  }
}

.prev-btn {
  color: #fff;
  background-color: $Secondary;
  font-size: 18px;
  width: 150px;
  height: 45px;
  border: none;
  border-radius: 2rem;
  margin-bottom: 1rem;
  transition: all 0.3s;
  &.theme2 {
    background-color: $Theme2Secondary;
  }

  &:active {
    background-color: $Theme2Secondary;
    transform: translateY(4px);
  }

  &:hover {
    background-color: $Other;
    &.theme2 {
      background-color: $Theme2Other;
    }
  }
}

.color-palette {
  display: flex;
}

.theme-1 {
  display: flex;
  border: 1px solid black;
  border-radius: 5px;
  margin-bottom: 1rem;
  margin-right: 1rem;

  .theme-item {
    height: 20px;
    width: 20px;
    background-color: $Primary;
    border-right: 1px solid black;
  }

  .theme-item:first-child {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
  }

  .theme-item:last-child {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    border-right: 0;
  }

  .item-1 { background-color: $Primary; }
  .item-2 { background-color: $Secondary; }
  .item-3 { background-color: $Background; }
  .item-4 { background-color: $Other; }
}

.theme-2 {
  display: flex;
  border: 1px solid black;
  border-radius: 5px;
  margin-bottom: 1rem;

  .theme-item {
    height: 20px;
    width: 20px;
    background-color: $Primary;
    border-right: 1px solid black;
  }

  .theme-item:first-child {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
  }

  .theme-item:last-child {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    border-right: 0;
  }

  .item-1 { background-color: $Theme2Primary; }
  .item-2 { background-color: $Theme2Secondary; }
  .item-3 { background-color: $Theme2Background; }
  .item-4 { background-color: $Theme2Other; }
}

.dog-image {
  margin-bottom: 50px;
  border-radius: 50px;
  max-width: 100vw;
}

.hidden {
  display: none;
}

@media only screen and (min-width: 375px) and (max-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
  .dog-logo {
    height: 100px;
    margin-bottom: 15px;
    position: inherit;
    display: block;
  }

  h1 {
    margin-top: 15px;
    margin-bottom: 15px;
    font-size: 36px;
  }

  .btn {
    font-size: 24px;
    width: 150px;
    height: 45px;
    padding: 0.5rem 1rem;
    border-radius: 1rem;
    margin-bottom: 25px;
  }

  .dog-image {
    max-width: 100vw;
  }

  .github-badge {
    width: 15vw;
  }
}

@media only screen and (max-width: 374px) {
  .dog-logo {
    height: 100px;
    margin-bottom: 15px;
    position: inherit;
    display: block;
  }

  .github-badge {
    width: 10vw;
  }

  h1 {
    margin-top: 15px;
    margin-bottom: 15px;
    font-size: 36px;
  }

  .btn {
    font-size: 24px;
    width: 150px;
    height: 45px;
    padding: 0.5rem 1rem;
    border-radius: 1rem;
    margin-bottom: 25px;
  }

  .dog-image {
    max-width: 100vw;
  }
}

